testsuite/poke.pkl/int-union-type-diag-6.pk
/* { dg-do compile } */

type Foo =
  union uint<32> /* { dg-error "invalid total size.*\n.*expected 32" } */
  {
  };
